# CLI_Chat_App

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  findkey.sh  hello.txt  log.txt  tmp.txt
.devcontainer/: devcontainer.json
.github/workflows/: GithubActions.yml
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  CommonTypes.h  CommonTypes.hpp  main.cpp
src/CursorManager/: CursorManager.cpp  CursorManager.h  CursorManager.hpp  CursorManagerInterfaces.h  CursorManagerTest.cpp  ICursorManager.h  ICursorManager.hpp  ObserverPattern.h  TextBufferInterfaces.h
src/CursorManager/Testutils/: TextBufferInfoMock.h  TextBufferMock.h
src/InputHandler/: IInputHandler.h  IInputHandler.hpp  InputHandler.cpp  InputHandler.h  InputHandler.hpp
src/InputHandler/CommandPattern/: CommandCreator.cpp  CommandCreator.h  CommandCreator.hpp  EditorControlCommands.cpp  EditorControlCommands.h  EditorControlCommands.hpp  ICommand.h  ICommand.hpp  ModifyTextCommands.cpp  ModifyTextCommands.h  ModifyTextCommands.hpp  MoveCursorCommands.cpp  MoveCursorCommands.h  MoveCursorCommands.hpp
src/Interfaces/: ICursorManager.h  IObserver.h  ISubject.h  ITextBuffer.h
src/ObserverPattern/: IObserver.cpp  IObserver.h  IObserver.hpp  ISubject.cpp  ISubject.h  ISubject.hpp  ISubjectDataGetter.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
src/ScreenRenderer/: IScreen.h  IScreen.hpp  IScreenRenderer.h  IScreenRenderer.hpp  ScreenAdapter.cpp  ScreenAdapter.h  ScreenAdapter.hpp  ScreenRenderer.cpp  ScreenRenderer.h  ScreenRenderer.hpp
src/TextBuffer/: ITextBuffer.h  ITextBuffer.hpp  TextBuffer.cpp  TextBuffer.h  TextBuffer.hpp  TextBufferInterface.h  TextBufferInterfaces.h  TextBufferTest.cpp
src/TextEditor/: ITextEditor.hpp  TextEditorFacade.cpp  TextEditorFacade.hpp
test/: CMakeLists.txt  CalculatorTest.cpp  CommandTest.cpp  CursorManagerTest.cpp  EditorControlCommandsTest.cpp  InputHandlerTest.cpp  ModifyTextCommandsTest.cpp  MoveCursorCommandsTest.cpp  ScreenRendererTest.cpp  TextBufferTest.cpp
test/Mocks/: CommandMock.h  CommandMock.hpp  CursorManagerMock.h  CursorManagerMock.hpp  ObjectMock.h  ObserverMock.h  ObserverMock.hpp  ScreenMock.h  ScreenMock.hpp  ScreenRendererMock.h  ScreenRendererMock.hpp  SubjectDataGetterMock.h  SubjectMock.h  SubjectMock.hpp  TextBufferMock.hpp
